--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # set timezone (for timestamps)
+    env:
+      TZ: America/Vancouver
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -30,6 +34,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Set secret
         run: echo "${{ secrets.SECRETJSON }}" > secret.json
+
+      - name: Set date
+        run: date "+%Y-%M-%d %H:%M %Z" > date.txt
         
       - name: Retrieve sources
         if: ${{ success() }}
