--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      - name: Install Python dependencies
+        run: python3 -m pip install google-api-python-client
         
       # Runs a set of commands using the runners shell
       - name: Set secret
