--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Python dependencies
-        run: python3 -m pip install google-api-python-client
+        run: python3 -m pip install google-api-python-client google-auth-oauthlib
         
       # Runs a set of commands using the runners shell
       - name: Set secret
