--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         
       # Runs a set of commands using the runners shell
       - name: Set secret
-        run: echo "${{ secrets.SECRETJSON }}" > secret.json
+        run: echo '${{ secrets.SECRETJSON }}' > secret.json
 
       - name: Set date
         run: date "+%Y-%M-%d %H:%M %Z" > date.txt
