--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,12 @@ jobs:
       - name: Collate sources
         if: ${{ success() }}
         run: python3 collate.py
+
+      - name: Commit files
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m "(Automated update)" -a
       
       - name: Publish
         if: ${{ success() }}
