--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ env:
       
 # Controls when the action will run. 
 on:
-  # Run the action at 17:00 every day.
+  # Run the action at 1:00 and 17:00 every day.
   schedule:
-    - cron: "0 17 * * *"
+    - cron: "0 1,17 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -55,7 +55,7 @@ jobs:
         run: |
           echo "{}" > ci.json
           jq ".date=\"$(date "+%Y-%M-%d %H:%M %Z")\"" ci.json | sponge ci.json
-          jq ".\"action-url\"=\"$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID\"" ci.json | sponge ci.json
+          jq ".\"action-url\"=\"$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID\"" ci.json | sponge ci.json
           jq ".status=\"${{ job.status }}\"" ci.json | sponge ci.json
 
       - name: Commit files
