--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install google-api-python-client google-auth-oauthlib
+          python3 -m pip install google-api-python-client google-auth-oauthlib pyduktape2 pdfplumber wget
           sudo apt-get update
           sudo apt-get install -y jq moreutils
         
@@ -39,11 +39,11 @@ jobs:
         
       - name: Retrieve sources
         if: ${{ success() }}
-        run: python3 retrieve.py
+        run: python3 src/retrieve.py
       
       - name: Collate sources
         if: ${{ success() }}
-        run: python3 collate.py
+        run: python3 src/collate.py
 
       - name: Reset repo due to failure
         if: ${{ failure() }}
