--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install google-api-python-client google-auth-oauthlib pdfplumber wget unidecode
           sudo apt-get update
-          sudo apt-get install -y jq moreutils
+          sudo apt-get install -y jq moreutils python3-setuptools
+          python3 -m pip install google-api-python-client google-auth-oauthlib pdfplumber wget unidecode
         
       # Runs a set of commands using the runners shell
       - name: Set secret
